Fixed null timestamp, message sending and text overflow bugs

--- a/src/App.css
+++ b/src/App.css
@@ -57,50 +57,6 @@ body,
     'opsz' 24
 }
 
-.sidebars {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  max-height: 100vh;
-  z-index: 100;
-}
-
-.sidebar {
-  width: 300px;
-  color: rgb(36, 36, 36);
-
-  margin: 10.75px;
-  border-radius: 15px;
-  box-shadow: 0 0 12px 5px rgb(234, 234, 234);
-
-  padding: 10px;
-}
-
-.sidebar-chatlist {
-  flex: 1;
-  margin-bottom: 0;
-  /* ? why does the bottom margin of this element not cover up with the margin of the top element even though chat list items behave like that */
-  padding-bottom: 0;
-  display: flex;
-  flex-direction: column;
-}
-
-.sidebar-bottom {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  height: 45px;
-}
-
-.sidebar-bottom img {
-  margin-right: 10px;
-  height: 45px;
-}
-
-.user-name {
-  font-size: medium;
-}
-
 /* CARDS */
 
 .card-container {
