--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -1,3 +1,32 @@
+.sidebars {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-height: 100vh;
+    z-index: 100;
+}
+
+.sidebar {
+    width: 300px;
+    color: rgb(36, 36, 36);
+
+    margin: 10.75px;
+    border-radius: 15px;
+    box-shadow: 0 0 12px 5px rgb(234, 234, 234);
+
+    padding: 10px;
+}
+
+.sidebar-chatlist {
+    flex: 1;
+    margin-bottom: 0;
+    /* ? why does the bottom margin of this element not cover up with the margin of the top element even though chat list items behave like that */
+    padding-bottom: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+
 .sidebar-header {
     display: flex;
     flex-direction: row;
@@ -38,6 +67,10 @@
     height: 50px;
     border-radius: 8px;
     padding: 10px;
+
+    /* needed to prevent text overflowing but doesn't require a flex: 1 on the sidebar-chat-item-text */
+    display: flex;
+    flex-direction: row;
 }
 
 .sidebar-chat-item:hover {
@@ -57,7 +90,8 @@
 }
 
 .chat-icon-container {
-    width: 100%;
+    width: 50px;
+    /* used to be 100% but then that would sequeeze the group icon, so I set a fixed size */
     height: 100%;
     display: flex;
     justify-content: center;
@@ -76,28 +110,36 @@
 
 .sidebar-chat-item-list {
     flex: 1;
-    flex-basis: 0px; /* necessary to prevent the element from expanding to accomodat the (total) height of all child divs */
+    flex-basis: 0px;
+    /* necessary to prevent the element from expanding to accomodat the (total) height of all child divs */
     overflow-y: auto;
 
-    -ms-overflow-style: none;  /* Hide scrollbar in Internet Explorer and Edge */
-    scrollbar-width: none;  /* Hide scrollbar in Firefox */
+    -ms-overflow-style: none;
+    /* Hide scrollbar in Internet Explorer and Edge */
+    scrollbar-width: none;
+    /* Hide scrollbar in Firefox */
 }
 
 .sidebar-chat-item-list::-webkit-scrollbar {
-    display: none; /* Hide scrollbar in Chrome, Safari, and Opera */
+    display: none;
+    /* Hide scrollbar in Chrome, Safari, and Opera */
 }
 
 .sidebar-chat-item-text {
     display: inline-block;
     height: 50px;
     margin-left: 10px;
-    vertical-align: bottom; /* makes sure the divs are in alignment! */
+    vertical-align: bottom;
+    /* makes sure the divs are in alignment! */
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .sidebar-chat-item-header {
-    display: flex;
-    flex-direction: row;
     align-items: center;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .sidebar-chat-item-header-id {
@@ -109,6 +151,35 @@
 .sidebar-chat-item-last-message {
     font-size: medium;
     color: grey;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+/* SIDEBAR BOTTOM */
+
+.sidebar-bottom-text {
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.sidebar-bottom {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 45px;
+}
+
+.sidebar-bottom img {
+    margin-right: 10px;
+    height: 45px;
+}
+
+.user-name {
+    font-size: medium;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .sidebar-bottom .global-id {
@@ -117,6 +188,9 @@
 
     font-size: x-small;
     background-color: #efeeee;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .sidebar-bottom .global-id:hover {
